# personal_finance_manager

./: .gitignore  pyproject.toml
src/finance_manager/: main.py  models.py  reporting.py  storage.py
